desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_home.scss
// hero section

#trp-video {
	top: -9999px;
	bottom: -9999px;
	left: -9999px;
	right: -9999px;
	margin: auto;
	position: absolute;
	@media (max-width: 1920px) {
		width: 100%;
	}
}

.trp-hero-overlay {
	background-color: rgba(184, 217, 234, 0.5);
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 1;
}

.trp-home-intro {
	color: #40474f;
	img {
		width: 100%;
		margin: 100px 0 93px 0;
		@media (max-width: $screen-md-min) {
			margin: 0 0 70px 0;
		}
	}
	h2 {
		font-size: 50px;
		font-family: ProximaNovaLight;
		margin-bottom: 50px;
	}
	p {
		font-family: ProximaNovaLight;
		font-size: 20px;
	}
	strong {
		font-family: ProximaNovaBold;
	}
	.trp-home-intro-separator {
		border-top: 7px solid #f1f9f9; 
	}
}

.trp-intro-text {
	margin: 100px 0 93px 0;
}

.page-template-page-templateshome-php {
	header {
		background-color: #f5fefe;
		height: 150px;
	}
	.trp-home-masthead-text {
		width: 100%;
		text-align: center;
		z-index: 1;
	}
	.trp-home-masthead {
		background-color: #f5fefe;
		position: relative;
		height: 700px;
		overflow: hidden;
		.row {
			width: 100%;
			@media (max-width: $screen-md-min) {
				width: auto;
			}
			text-align: center;
			height: 700px;
			h1 {
				font-size: 66px;
				color: #fff;
				font-family: ProximaNovaLight;
				@media (max-width: $screen-md-min) {
					font-size: 48px;
				}
			}
		}
		img {
			width: 100%;
			margin: 120px 0 70px 0;
		}
		.row {
			display: table;
		}
		[class*="col-"] {
			float: none;
			display: table-cell;
			vertical-align: middle;
		}
		strong {
			display: block;
		}
		a {
			float: none;
		}
		h1 {
			margin-top: 0;
		}
	}
	.trp-home-masthead-bottom {
		background-color: #e1f7f7;
		height: 140px;
		position: absolute;
		bottom: 0;
		width: 100%;
	}
}

// Features section

.trp-features-hospitals {
	.trp-feature {
		background-color: #80b2d9;
	}
}

.trp-features-facilities {
	.trp-feature {
		background-color: #63c4c3;
	}
}

.trp-features-orgs {
	.trp-feature {
		background-color: #a491ba;
	}
}

.trp-features-p {
	margin-bottom: 70px;
}

.trp-features {
	position: relative;
	margin-bottom: 66px;
	margin-top: 20px;
	@media (max-width: 991px) {
		margin-bottom: 0;
	}
	h2 {
		font-size: 50px;
		font-family: ProximaNovaLight;
		color: #40474f;
		line-height: 56px;
		margin-top: 100px;
	}
	p {
		font-size: 20px;
		color: #40474f;
		font-family: ProximaNovaLight;
		line-height: 30px;
		strong {
			font-family: ProximaNovaBold;
		}
	}
	.row {
	}
	.trp-feature {
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		border-radius: 100%;
		margin: 0 15px;
		color: #fff;
		font-size: 20px;
		padding-top: 50px;
		@media (max-width: 991px) {
			padding-top: 85px;
			max-width: 400px;
			max-height: 400px;
			display: block;
			margin-left: auto;
			margin-right: auto;
		}
		@media (max-width: $screen-sm-min) {
			max-width: 290px;
			padding-top: 35px;
			max-height: 290px;
		}
		@media (max-width: 380px) {
			max-width: 240px;
			max-height: 240px;
			padding-top: 27px;
		}
		img {
			max-width: 175px;
			max-height: 80px;
			@media (max-width: $screen-lg-min) {
				max-height: 55px;
			}
			@media (max-width: 380px) {
				max-height: 35px;
			}
		}
		a {
			border: 2px solid #fff;
			border-radius: 50px;
			padding: 11px 20px;
			color: #fff;
			display: inline-block;
			@media (max-width: $screen-lg-min) {
				font-size: 16px;
			}
			@media (max-width: 380px) {
				font-size: 12px;
				padding: 8px 15px;
			}
			&:hover,
			&:active,
			&:focus {
				text-decoration: none;
			}
		}
		h4 {
			font-size: 22px;
			font-family: ProximaNovaBold;
			text-transform: uppercase;
			@media (max-width: $screen-lg-min) {
				font-size: 18px;
			}
			@media (max-width: 380px) {
				font-size: 15px;
			}
		}
		p {
			color: #fff;
			line-height: 18px;
			font-size: 18px;
			padding: 0 30px;
			margin-bottom: 25px;
			@media (max-width: $screen-lg-min) {
				font-size: 16px;
				padding: 0 15px;
			}
			@media (max-width: 380px) {
				font-size: 14px;
				margin-bottom: 12px;
			}
		}
	}
	.trp-feature-helper {
		margin-top: 100%;
		@media (max-width: 991px) {
			margin-top: 450px;
			//margin-top: 65%;
		}
		@media (max-width: $screen-sm-min) {
			margin-top: 340px;
		}
		@media (max-width: 380px) {
			margin-top: 270px;
		}
	}
}

// use today section

.trp-use-today {
	background-color: #53c1c0;
	color: #fff;
	padding-top: 90px;
	padding-bottom: 124px;
	h2, span {
		font-family: ProximaNovaLight;
	}
	h2 {
		font-size: 50px;
	}
	span {
		display: block;
		font-size: 20px;
	}
	a {
		float: none;
		margin-top: 50px;
	}
}

// testimonials

.trp-testimonials {
	padding-bottom: 130px;
	padding-top: 100px;
	i {
		color: #53c1c0;
		font-size: 55px;
	}
	.trp-testimonial-title,
	.trp-testimonial-hospital-name,
	.trp-testimonial-name {
		color: #40474f;
	}
	.trp-testimonial-title {
		font-size: 32px;
		font-family: ProximaNovaLight;
		margin-bottom: 25px;
	}
	.trp-testimonial-hospital-name,
	.trp-testimonial-name {
		font-size: 18px;
		display: block;
		font-family: ProximaNovaRegular;
	}
	.trp-testimonial-name {
		text-transform: capitalize;
	}
	.trp-testimonial-hospital-name {
		font-style: italic;
	}
}

// mobile section

.trp-mobile-app-analytics,
.trp-mobile-app {
	background-color: #eefefe;
	.row {
		display: table;
	}
	[class*="col-"] {
		float: none;
		display: table-cell;
		vertical-align: middle;
		@media (max-width: $screen-md-min) {
			display: inline-block;
		}

	}
	img {
		margin-top: 64px;
		width: 100%;
	}
	h2 {
		font-size: 50px;
		color: #40474f;
		font-family: ProximaNovaLight;
	}
	li {
		font-size: 20px;
		color: #40474f;
		padding-bottom: 13px;
		font-family: ProximaNovaLight;
		list-style-type: none;
	}
	i {
		color: #53c1c0;
		margin-right: 13px;
	}
	ul {
		padding-top: 30px;
		padding-left: 0;
	}
}

.trp-mobile-app-analytics {
	background-color: #fff;
	img {
		margin: 125px 0;
		@media (max-width: $screen-md-min) {
			margin: 50px 0;
		}
	}
}

